--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<div id="reactjson"></div>
 	<script src="vendor/react.js"></script>
 	<script src="vendor/jquery-2.1.4.min.js"></script>
+	<script src="build/profile.js"></script>
 	<script src="build/app.js"></script>
 </body>
 </html>
