profile is outputting all data correctly and new about component created

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 	<div id="reactjson"></div>
-	<script src="vendor/react.js"></script>
+	<script src="vendor/react.min.js"></script>
 	<script src="vendor/jquery-2.1.4.min.js"></script>
 	<script src="build/profile.js"></script>
+	<script src="build/about.js"></script>
 	<script src="build/app.js"></script>
 </body>
 </html>
