--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="vendor/jquery-2.1.4.min.js"></script>
 	<script src="build/profile.js"></script>
 	<script src="build/about.js"></script>
+	<script src="build/work.js"></script>
 	<script src="build/app.js"></script>
 </body>
 </html>
