added moment.js and started to format start, end dates

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<div id="reactjson"></div>
 	<script src="vendor/react.min.js"></script>
 	<script src="vendor/jquery-2.1.4.min.js"></script>
+	<script src="vendor/moment.js"></script>
 	<script src="build/profile.js"></script>
 	<script src="build/about.js"></script>
 	<script src="build/work.js"></script>
+	<script src="build/workItem.js"></script>
 	<script src="build/app.js"></script>
 </body>
 </html>
