--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 	<script src="vendor/react.min.js"></script>
 	<script src="vendor/jquery-2.1.4.min.js"></script>
 	<script src="vendor/moment.js"></script>
-	<script src="build/profile.js"></script>
-	<script src="build/about.js"></script>
-	<script src="build/work.js"></script>
-	<script src="build/workItem.js"></script>
-	<script src="build/app.js"></script>
+	<script src="build/bundle.js"></script>
 </body>
 </html>
